Rebranding to Miko

--- a/index.miko.html
+++ b/index.miko.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Welcome to Polybox!</title>
+<title>Welcome to Miko!</title>
 <style>
     body {
         width: 35em;
@@ -12,14 +12,14 @@
 </style>
 </head>
 <body>
-<h1>Welcome to Polybox!</h1>
+<h1>Welcome to Miko!</h1>
 <p>If you see this page, the nginx web server is successfully installed and
 working. Further configuration is required.</p>
 
 <p>For online documentation and support please refer to
-<a href="https://github.com/mardix/polybox">Polybox</a>.<br/>
+<a href="https://github.com/mardix/miko">Miko</a>.<br/>
 </p>
 
-<p><em>Thank you for using Polybox.</em></p>
+<p><em>Thank you for using Miko.</em></p>
 </body>
 </html>
