--- a/index.sailor.html
+++ b/index.sailor.html
@@ -12,9 +12,9 @@
 </style>
 </head>
 <body>
-<h1>Welcome to Sailor!</h1>
+<h1>Hello <strong>Sailor</strong>!</h1>
 <p>If you see this page, the nginx web server is successfully installed and
-working. Further configuration is required.</p>
+working. </p>
 
 <p>For online documentation and support please refer to
 <a href="https://github.com/mardix/sailor">Sailor</a>.<br/>
